--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;600&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <link rel="stylesheet" href="src/stylesheet.css">
     <script src="src/script.js" defer></script>
 
@@ -21,8 +24,12 @@
         <div id="painelLetras" class="painel-letras"></div>
         <input id="input" type="text" class="txt-letra" maxlength="1">
         <div class="botoes">
-            <button id="botaoJogar">Jogar</button>
-            <button id="botaoRecomecar">Recomeçar</button>
+            <button id="botaoJogar"><span class="material-symbols-outlined">
+                    send</span></button>
+            <button id="botaoRecomecar"><span class="material-symbols-outlined">
+                refresh
+                </span></button>
+
         </div>
     </div>
 </body>
