refatoração: separando codigos da tela e entidade em classes e arquivos separados

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <link rel="stylesheet" href="src/stylesheet.css">
-    <script src="src/script.js" defer></script>
+    <script src="src/jogoDaForca.js" defer></script>
+    <script src="src/jogoDaForcaTela.js" defer></script>
 
 </head>
 
@@ -27,7 +28,7 @@
             <button id="botaoJogar"><span class="material-symbols-outlined">
                     send</span></button>
             <button id="botaoRecomecar"><span class="material-symbols-outlined">
-                refresh
+                    refresh
                 </span></button>
 
         </div>
